templates/bootstrap3/stylesheet.css
/* ... */
/*address block */
div#address_block div.address{
width: 260px;
float:left;
height:140px;
padding:5px; 
margin:0 15px 15px 0;
border: solid 1px #a3a3a3;
background:#F8F8F8;
}

/*new checkout*/
div.checkout_infos h2{
font-family: Arial, Sans-serif;
color:#333; /*#1e3630;*/
font-weight:bold;
font-size:15px;
margin: 0px;
float:left;
}
div.checkout_infos a{
font-style:italic;
color:#009933; /*#1e3630;*/
text-decoration: underline;
}
div.checkout_infos div.text,p.text{
margin-top:0px;
}
div#address_block div.address{
height:140px;
padding:5px; 
border: solid 1px #a3a3a3;
background:#F8F8F8;
}
div#address_block input{
vertical-align: middle;
}
div.checkoutInfoBoxes{
border: 0px solid #E8E8E8;
padding:5px;
}
div.checkoutInfoBoxes  a.more_info{
color: red!important;
}
div.checkoutInfoBoxesLarge{
width:910px;
padding:5px;
margin-right:0px;
float:left;
}
div.checkoutNavBoxes{
border: 1px solid #E8E8E8;
/*background:#F8F8F8;*/
padding:5px;
height:130px;
}
div.checkoutNav2Boxes{
border: 1px solid #E8E8E8;
padding:5px;
min-height: 70px;
}
div.checkoutbox{
border: 2px solid #999!important;
background: #E3F4DA!important; /*diese Farbe muss sich erheblich abheben*/
}
div.checkoutbox .image{
max-width:80px;
}
div.checkoutbox td.main_row {
border-top: 1px solid #E8E8E8;
}
div.checkoutbox div.hr{
border:none;
border-top: 1px solid #E8E8E8;
color: #E3F4DA; /*wie hintergrundfarbe*/
background-color:#E3F4DA; /*wie hintergrundfarbe*/
height: 1px;
}
div.checkoutbox .details{
padding: 0 12px 0 0; 
color: #000;
font-weight: bold;
}
div.checkoutbox .total table td {
padding:0px;
}
div.checkoutbox .small{
font-size: 11px;
}

/************************************************
www.Janolaw.de
http://www.janolaw.de
BASIC Template for AGB Hosting Content
************************************************/
/* janolaw BOF */
.janolaw-absatz {
	font-size: 12px;
	margin: 8px 4px 4px 8px;        
}
.janolaw-paragraph {
	font-size: 14px;
	font-weight: bold;
	text-align: center;
	margin: 16px 4px 4px 8px;
}
#janolaw-paragraph {
	font-size: 14px;
	font-weight: bold;
	text-align: center;
	margin: 16px 4px 4px 8px;
}
.janolaw-text {
	font-size: 12px;
	margin: 8px 4px 4px 8px;
}
.janolaw-adress {
	font-size: 12px;
	margin: 8px 4px 4px 8px;
}
.janolaw-block {
	font-size: 12px;
	margin: 8px 4px 4px 8px;
}
/* janolaw EOF */

@media screen and (max-width: 420px) {
#tblcelltotalblock select {
	width: 100%!important;
}
}

.cat_desc {
  position: absolute;
  bottom:0px;
}

.cc_container {
	border: solid #d9d9d9 1px !important;
	background: #f8f8f8 !important;
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
	font-size: 15px !important;
	padding: 5px 30px 5px !important;
}

.cc_container .cc_btn, .cc_container .cc_btn:visited {
	color: #fff !important;
    background-color: #337ab7 !important;
    border-color: #2e6da4 !important;
	transition: none !important;
	-webkit-transition: none !important;
}

.cc_container .cc_btn:hover {
    color: #fff !important;
    background-color: #286090 !important;
    border-color: #204d74 !important;
}

.cc_container a, .cc_container a:visited {
    color: #337ab7 !important;
    text-decoration: none !important;
}

.cc_container a:focus, .cc_container a:hover {
    color: #23527c !important;
    text-decoration: underline !important;
}

.catimglink {
	display: inline-block;
}
.products_name_block{
    padding-bottom: 15px;
}

/* Category menu identation */

.nav-stacked ul > li > a {
    padding-left: 20px;
}

.nav-stacked > li.level3 > a > h3.h6 {
	padding-left: 5px;
}

.nav-stacked > li.level4 > a > h3.h6 {
	padding-left: 10px;
}

.nav-stacked > li.level5 > a > h3.h6 {
	padding-left: 15px;
}

